# stock_trade_z

./: .env.example  .gitignore  README.md  pyproject.toml  stocklist.good.csv
.github/workflows/: daily-stock-trade.yml
src/stock_trade_z/: add_xueqiu_urls.py  check_code.py  check_code_bs.py  detect_risk.py  fetch_kline.py  fetch_stocklist.py  fetch_stocklist_300_500.py  find_stock_by_j.py  find_stock_by_price_concurrent.py  select_stock.py  selector.config.json  sort_csv.py  stocklist.300_500.csv  stocklist.total.csv  try_play.py  update_to_goodlist.py
src/stock_trade_z/lib/: bao_stock_client.py  compare.py  compute.py  constant.py  data_utils.py  fetch_data.py  load_data.py  load_selector.py  load_stocklist.py  logger.py  parallel_utils.py  paths.py  risk_selectors.py  selector.py  send_lark_message.py  time.py  ts_pro_api.py  utils.py  xueqiu.py
